# tensor-message-passing

./: README.md  pyproject.toml
tensor_message_passing/: __init__.py
tests/: test_tensor_message_passing.py  test_tnmpa.py
tnmpa/: WalkSAT.py  __init__.py  ksat_instance.py  message_passing_ksat.py  mp_solvers.py  quimb_bp.ipynb  quimb_bp.py  quimb_vbp.py  quimb_vbp2.py  tensor_factories.py  walksat.py
tnmpa/base/: factor_graph.py
tnmpa/examples/: Untitled.ipynb  compare_BP_exact.ipynb  compare_SP_dense.ipynb  example_ksat_solver.ipynb  ksat_bp.ipynb  ksat_sp.ipynb  ksat_two_norm_bp.ipynb  ksat_walksat.ipynb  mis_quimb_bp.ipynb  quimb_bp.ipynb  test_bp.ipynb  test_entropies.ipynb  vectorized belief propagation.ipynb
tnmpa/generators/: random.py
tnmpa/models/: __init__.py  factor_graph.py  factor_graph_test.ipynb  ksat.py  ksat_instance.py  mis.py
tnmpa/solvers/: quimb_vbp.py  tensor_factories.py  walksat.py
tnmpa/solvers/.ipynb_checkpoints/: __init__-checkpoint.py
