[tool.poetry]
name = "tensor-message-passing"
version = "0.1.0"
description = ""
authors = ["Nicola Pancotti <npancott@amazon.com>"]
readme = "README.md"
packages = [{include = "tensor_message_passing"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
