[tool.poetry]
name = "tnmpa"
version = "0.1.0"
description = ""
authors = ["Nicola Pancotti <nicola.pancotti@gmail.com>"]
readme = "README.md"
packages = [{include = "tnmpa"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
importlib = "^1.0.4"
llvmlite = "^0.40.0"
numba = "^0.57.0"
quimb = "^1.5.0"
ipython = "^8.14.0"
ipykernel = "^6.23.2"
networkx = "^3.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
